# xv0

./: .gitignore  Cargo.toml  Makefile  README.md  boot.asm  test.sh
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/cpu/: interrupts.rs
src/drivers/: keyboard.rs  timer.rs
src/kernel/: mod.rs  serial.rs  vga_buffer.rs
src/kernel/cpu/: interrupts.rs
src/kernel/drivers/: keyboard.rs  mod.rs  timer.rs
src/kernel/memory/: gdt.rs  mod.rs  paging.rs
src/kernel/memory/allocator/: fixed_size_block.rs
src/kernel/task/: executor.rs  global.rs  task.rs
src/kernel/task/keyboard/: interface.rs  keyboard.rs  mod.rs
src/memory/: gdt.rs  mod.rs  paging.rs
src/memory/allocator/: fixed_size_block.rs  mod.rs
src/task/: executor.rs  global.rs  keyboard.rs  mod.rs  task.rs
src/task/keyboard/: keyboard.rs
src/userspace/: main.rs  mod.rs
src/userspace/input/: keyboard_handler.rs
tests/: basic_boot.rs  vga_buffer.txt
