[package]
name = "xv0"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9" # For some reason latest version errors?
volatile = "0.2.6" # Newer versions not compatible with the guide i was following at the start
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[[bin]]
name = "xv0"
test = false
bench = false



[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]