[package]
name = "xv0"
version = "0.1.0"
edition = "2024"


[dependencies]
bootloader = "0.9" # For some reason latest version errors? Ill just keep it here
volatile = "0.2.6" # Newer versions not compatible with the guide i was following at the start, may fix later
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "xv0"
test = true
bench = false