[package]
name = "xv0"
version = "0.1.0"
edition = "2024"


[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]} # For some reason latest version errors? Ill just keep it here
volatile = "0.2.6" # Newer versions not compatible with the guide i was following at the start, may fix later
spin = "0.10.0"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "xv0"
test = true
bench = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 10


[profile.test]
quiet = true